--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,9 +1,21 @@
-# syntax=docker/dockerfile:1
-FROM python:3-alpine
-ENV PYTHONUNBUFFERED=1
-WORKDIR /usr/src/app
-COPY requirements.txt /usr/src/app/
-RUN pip install -U -r requirements.txt
-COPY ./web /usr/src/app/
-COPY ./entrypoint.sh /
-ENTRYPOINT ["/entrypoint.sh"]
+# Use an official Python runtime as a parent image
+FROM python:3.9-slim
+
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy the current directory contents into the container at /app
+COPY . /app
+
+# Install any needed packages specified in requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Make port 5000 available to the world outside this container
+EXPOSE 5000
+
+# Define environment variable to tell Flask it is running inside Docker
+ENV FLASK_APP=app.py
+ENV FLASK_RUN_HOST=0.0.0.0
+
+# Run app.py when the container launches
+CMD ["flask", "run"]
