--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,6 @@
-Flask
-SQLAlchemy
-gunicorn
-
-PyMySQL
-coloredlogs
-python-dotenv
+Flask==2.1.0
+Werkzeug==2.0.3
+torch==1.9.0
+torchvision==0.10.0
+Pillow==8.3.1
+numpy==1.21.0
